<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/transparent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:context=".ui.Settings.SettingsFragment">


        <TextView
            android:id="@+id/CurrentKrikoinSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="..."
            android:textSize="20sp"
            android:textColor="@color/gainsboro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SettingsKriKoin"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/default_krikoin"
            app:layout_constraintBottom_toBottomOf="@+id/CurrentKrikoinSettings"
            app:layout_constraintStart_toEndOf="@+id/CurrentKrikoinSettings"
            app:layout_constraintTop_toTopOf="@+id/CurrentKrikoinSettings" />

        <TextView
            android:id="@+id/KrikoinPerSecondSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="..."
            android:textColor="@color/gainsboro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/CurrentKrikoinSettings"
            app:layout_constraintStart_toStartOf="@+id/CurrentKrikoinSettings"
            app:layout_constraintTop_toBottomOf="@+id/CurrentKrikoinSettings"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/SettingsKriKoinPerSecond"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@drawable/default_krikoin"
            app:layout_constraintBottom_toBottomOf="@+id/KrikoinPerSecondSettings"
            app:layout_constraintStart_toEndOf="@+id/KrikoinPerSecondSettings"
            app:layout_constraintTop_toTopOf="@+id/KrikoinPerSecondSettings" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeBackground"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/changeBackground"
            android:textColor="@color/lightPurple"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CurrentKrikoinSettings"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeKriKoin"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/changeKriKoin"
            android:textColor="@color/darkYellow"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeBackground"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeIcon"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/changeProduction"
            android:textColor="@color/darkGreen"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeKriKoin"
            tools:ignore="TextSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/normalNotation"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/turnNormalNotation"
            android:textColor="@color/lightBlue"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@id/TrashySpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeIcon"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scienceNotation"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/turnScienceNotation"
            android:textColor="@color/cyan"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/TrashySpace"
            app:layout_constraintTop_toBottomOf="@+id/changeIcon"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/isBackgroundFill"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup_change"
            android:text="@string/isStretchBackground"
            android:textColor="@color/orange"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normalNotation"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/clickCountAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickAmount"
            android:textColor="@color/darkYellow"
            android:textSize="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isBackgroundFill" />

        <TextView
            android:id="@+id/timeSpentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/timeSpent"
            android:textColor="@color/darkYellow"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clickCountAmount" />


        <TextView
            android:id="@+id/clickCountAmountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/darkYellow"
            android:textSize="20dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/clickCountAmount"
            app:layout_constraintTop_toTopOf="@+id/clickCountAmount"
            app:layout_constraintBottom_toBottomOf="@id/clickCountAmount"/>

        <TextView
            android:id="@+id/timeSpentAmountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/darkYellow"
            android:textSize="20dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/timeSpentAmount"
            app:layout_constraintTop_toTopOf="@+id/timeSpentAmount"
            app:layout_constraintBottom_toBottomOf="@id/timeSpentAmount"/>

        <ImageButton
            android:id="@+id/rebornButton1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:background="@drawable/rebornidb1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeSpentAmount"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/rebornButton2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:background="@drawable/rebornidb2"
            app:layout_constraintStart_toEndOf="@id/rebornButton1"
            app:layout_constraintTop_toBottomOf="@+id/timeSpentAmount"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/rebornButton3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:background="@drawable/rebornidb3"
            app:layout_constraintStart_toEndOf="@id/rebornButton2"
            app:layout_constraintTop_toBottomOf="@+id/timeSpentAmount"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/rebornButton4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:background="@drawable/rebornidb4"
            app:layout_constraintStart_toEndOf="@id/rebornButton3"
            app:layout_constraintTop_toBottomOf="@+id/timeSpentAmount"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:id="@+id/TrashySpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/timeSpentAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Space
            android:id="@+id/Trashy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/TrashySpace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>